--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ amqp==5.3.1
 # LLM & AI (Minimal Stack - only what we actually use)
 langchain-core==1.2.6
 langchain-openai==1.1.6
+langchain-anthropic==0.1.1
 openai==2.14.0
 anthropic==0.19.0
 tiktoken==0.12.0
