--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -12,18 +12,8 @@ services:
       branch: main
       deploy_on_push: true
     
-    source_dir: /
+    dockerfile_path: Dockerfile
     
-    build_command: |
-      pip install --upgrade pip
-      pip install -r requirements.txt
-    
-    run_command: |
-      python manage.py migrate --noinput
-      python manage.py collectstatic --noinput
-      gunicorn config.wsgi:application --bind 0.0.0.0:8080 --workers 2 --threads 2 --timeout 120
-    
-    environment_slug: python
     instance_count: 1
     instance_size_slug: basic-xxs
     
