--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -1,102 +1,105 @@
-# =============================================================================
-# DIGITAL OCEAN APP PLATFORM CONFIGURATION
-# =============================================================================
+databases:
+- cluster_name: app-0ce03331-db28-4bbb-b48e-5581a645561a
+  db_name: db
+  db_user: doadmin
+  engine: PG
+  name: app-0ce03331-db28-4bbb-b48e-5581
+  production: true
+  version: "17"
+ingress:
+  rules:
+  - component:
+      name: web
+    match:
+      path:
+        prefix: /api
+  - component:
+      name: web
+    match:
+      path:
+        prefix: /admin
+  - component:
+      name: web
+    match:
+      path:
+        prefix: /static
+  - component:
+      name: frontend
+    match:
+      path:
+        prefix: /
 name: kp-realestate
 region: nyc
-
-# Django Backend API
 services:
-  - name: web
-    github:
-      repo: 1di210299/real-estate-llm-generator
-      branch: main
-      deploy_on_push: true
-    
-    dockerfile_path: Dockerfile
-    
-    instance_count: 1
-    instance_size_slug: basic-xxs
-    
-    http_port: 8080
-    
-    routes:
-      - path: /api
-      - path: /admin
-      - path: /static
-    
-    envs:
-      - key: DJANGO_SETTINGS_MODULE
-        value: config.settings.production
-      
-      - key: DEBUG
-        value: "False"
-      
-      - key: SECRET_KEY
-        value: ${SECRET_KEY}
-        type: SECRET
-      
-      - key: ALLOWED_HOSTS
-        value: .ondigitalocean.app,localhost,127.0.0.1,100.127.0.0/16
-      
-      - key: CORS_ALLOWED_ORIGINS
-        value: https://${APP_DOMAIN}
-      
-      - key: DATABASE_URL
-        value: ${db.DATABASE_URL}
-      
-      - key: OPENAI_API_KEY
-        value: ${OPENAI_API_KEY}
-        type: SECRET
-      
-      - key: OPENAI_MODEL_CHAT
-        value: gpt-4o-mini
-      
-      - key: OPENAI_MODEL_COMPLEX
-        value: gpt-4o
-      
-      - key: SECURE_SSL_REDIRECT
-        value: "True"
-      
-      - key: SECURE_HSTS_SECONDS
-        value: "31536000"
-      
-      - key: SESSION_COOKIE_SECURE
-        value: "True"
-      
-      - key: CSRF_COOKIE_SECURE
-        value: "True"
-    
-    health_check:
-      http_path: /api/health/
-      initial_delay_seconds: 60
-      period_seconds: 30
-      timeout_seconds: 10
-      success_threshold: 1
-      failure_threshold: 3
-
-# React Frontend (Static Site)
+- dockerfile_path: Dockerfile
+  envs:
+  - key: DJANGO_SETTINGS_MODULE
+    scope: RUN_AND_BUILD_TIME
+    value: config.settings.production
+  - key: DEBUG
+    scope: RUN_AND_BUILD_TIME
+    value: "False"
+  - key: SECRET_KEY
+    scope: RUN_AND_BUILD_TIME
+    type: SECRET
+    value: EV[1:W2u4FUXFXfqF9SocgHn+Bu7xb8RYwuqd:8cr71j0Pu2HiapwJK1e5Rc/OAzbHZu3rSJAiTT4=]
+  - key: ALLOWED_HOSTS
+    scope: RUN_AND_BUILD_TIME
+    value: .ondigitalocean.app,localhost,127.0.0.1,100.127.0.0/16
+  - key: CORS_ALLOWED_ORIGINS
+    scope: RUN_AND_BUILD_TIME
+    value: https://${APP_DOMAIN}
+  - key: DATABASE_URL
+    scope: RUN_AND_BUILD_TIME
+    value: ${app-0ce03331-db28-4bbb-b48e-5581.DATABASE_URL}
+  - key: OPENAI_API_KEY
+    scope: RUN_AND_BUILD_TIME
+    type: SECRET
+    value: EV[1:gZCzmRzyPeqXcrBsArZHfAM+X/om7MsY:oOQPyqvbxntRutK0uMOZSK/i9iyADsbZBt+4s2pflWtI]
+  - key: OPENAI_MODEL_CHAT
+    scope: RUN_AND_BUILD_TIME
+    value: gpt-4o-mini
+  - key: OPENAI_MODEL_COMPLEX
+    scope: RUN_AND_BUILD_TIME
+    value: gpt-4o
+  - key: SECURE_SSL_REDIRECT
+    scope: RUN_AND_BUILD_TIME
+    value: "True"
+  - key: SECURE_HSTS_SECONDS
+    scope: RUN_AND_BUILD_TIME
+    value: "31536000"
+  - key: SESSION_COOKIE_SECURE
+    scope: RUN_AND_BUILD_TIME
+    value: "True"
+  - key: CSRF_COOKIE_SECURE
+    scope: RUN_AND_BUILD_TIME
+    value: "True"
+  github:
+    branch: main
+    deploy_on_push: true
+    repo: 1di210299/real-estate-llm-generator
+  health_check:
+    failure_threshold: 3
+    http_path: /api/health/
+    initial_delay_seconds: 60
+    period_seconds: 30
+    success_threshold: 1
+    timeout_seconds: 10
+  http_port: 8080
+  instance_count: 1
+  instance_size_slug: basic-xxs
+  name: web
 static_sites:
-  - name: frontend
-    github:
-      repo: 1di210299/real-estate-llm-generator
-      branch: main
-      deploy_on_push: true
-    
-    source_dir: /data-collector-frontend
-    environment_slug: node-js
-    build_command: npm ci && npm run build
-    output_dir: dist
-    
-    routes:
-      - path: /
-    
-    envs:
-      - key: VITE_API_URL
-        value: ${web.PUBLIC_URL}
-
-# PostgreSQL Database
-databases:
-  - name: db
-    engine: PG
-    version: "17"
-    production: false
+- build_command: npm ci && npm run build
+  environment_slug: node-js
+  envs:
+  - key: VITE_API_URL
+    scope: BUILD_TIME
+    value: ${web.PUBLIC_URL}/api
+  github:
+    branch: main
+    deploy_on_push: true
+    repo: 1di210299/real-estate-llm-generator
+  name: frontend
+  output_dir: dist
+  source_dir: /data-collector-frontend
