Add /v1 prefix to ingress rules to route v1 API calls to backend

--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -17,6 +17,11 @@ ingress:
       name: web
     match:
       path:
+        prefix: /v1
+  - component:
+      name: web
+    match:
+      path:
         prefix: /admin
   - component:
       name: web
