Fix VITE_API_URL: use APP_URL instead of web.PUBLIC_URL to get root domain

--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -110,7 +110,7 @@ static_sites:
   envs:
   - key: VITE_API_URL
     scope: BUILD_TIME
-    value: ${web.PUBLIC_URL}
+    value: ${APP_URL}
   github:
     branch: main
     deploy_on_push: true
