--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -81,7 +81,7 @@ services:
     repo: 1di210299/real-estate-llm-generator
   health_check:
     failure_threshold: 3
-    http_path: /health/
+    http_path: /api/health/
     initial_delay_seconds: 60
     period_seconds: 30
     success_threshold: 1
