--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,6 +6,11 @@ django-cors-headers==4.3.1
 django-filter==23.5
 django-extensions==3.2.3
 
+# WebSocket Support
+channels==4.0.0
+channels-redis==4.1.0
+daphne==4.0.0
+
 # Database
 psycopg2-binary==2.9.9
 pgvector==0.2.4
