Major UI overhaul: Professional chatbot design, batch processing improvements, Google Sheets integration, and updated DigitalOcean config

--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,14 @@ ENV/
 env.bak/
 venv.bak/
 
+# Google Sheets credentials
+backend/credentials/
+*.json
+!package.json
+!package-lock.json
+!tsconfig.json
+!tsconfig.*.json
+
 # IDE
 .vscode/
 .idea/
