--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -48,6 +48,12 @@ playwright==1.42.0
 beautifulsoup4==4.12.3
 lxml==5.1.0
 requests==2.32.5
+
+# Google API
+google-auth==2.27.0
+google-auth-oauthlib==1.2.0
+google-auth-httplib2==0.2.0
+google-api-python-client==2.116.0
 httpx==0.27.0
 soupsieve==2.7
 scrapfly-sdk==0.8.24
